<resources>
    <string name="app_name">Eserviss</string>
    <string name="app_website">www.eserviss.com</string>
    <string name="facebook_app_id">1496031187360822</string>
    <string name="google_app_id">AIzaSyDJ70fNHyOGY5YImSL-eOdL9l95h99Kpx4</string>
    <string name="appname"><font fgcolor="#ffffffff">Eserviss</font></string>
    <string name="menu"><font fgcolor="#ffffffff">MENU</font></string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="condition">Terms &amp; Conditions</string>
    <string name="privacy">Privacy &amp; Policy</string>
    <string name="cvc">CVC</string>
    <string name="cardNumber">Card Number</string>
    <string name="save">SAVE</string>
    <string name="back">BACK</string>
    <string name="skip">SKIP</string>
    <string name="nocabs">No Cabs</string>
    <string name="currencuSymbol">$</string>
    <string name="distanceUnit">Km</string>
    <string name="registeron">Register on</string>
    <string name="profileLogout">Your profile is rejected by our admin</string>
    <string name="next">NEXT</string>
    <string name="phone">PHONE</string>
    <string name="zipcode">ZIPCODE</string>
    <string name="register">REGISTER</string>
    <string name="regisration">REGISTATION</string>
    <string name="apply">APPLY</string>
    <string name="progressMessage">Adding card..</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="edit">Edit</string>
    <string name="imagedire">imagedire</string>
    <string name="imagefilename">Eserviss img</string>
    <string name="pay_cash">Pay with cash</string>
    <string name="pay_card">Pay with card</string>
    <string name="str_atv_places">Appointment location</string>
    <string name="later">LATER</string>
    <string name="now">NOW</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="rate_googlePlay">RATE US IN GOOGLE PLAY</string>
    <string name="like_onFacebook"> LIKE US ON FACEBOOK</string>
    <string name="legal">LEGAL</string>
    <string name="choosecountry">Choose Country</string>
    <string name="scan_credit_card">SCAN CREDIT CARD</string>
    <string name="enter_credit_card">Enter credit card information</string>
    <string name="not_a_valid_card"> You did not enter a valid card</string>
    <string name="progress">progress</string>
    <string name="fill_all_fields">Please fill all the required information.</string>
    <string name="requestTimeout">Request Timeout </string>
    <string name="Card_Added_Successfully">Card Added Successfully!!</string>
    <string name="server_error">Network Error. Retry.</string>
    <string name="invalid_email">Enter the valid email id.</string>
    <string name="enter_verificationcode">Enter the verification code.</string>
    <string name="enter_correct_verification">Enter the valid verification code.</string>
    <string name="add_credit_card">ADD CREDIT CARD</string>
    <string name="credit_card_num">Credit Card Number</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="error">Error:</string>
    <string name="ok">OK</string>
    <string name="no_bookings_for_day">No Bookings found in this day</string>
    <string name="select_payment">ADD CARD</string>
    <string name="deleting_card">Deleting card. Please wait</string>
    <string name="card_removed">Card Removed Successfully</string>
    <string name="card_info">CARD INFO</string>
    <string name="expiry">EXP</string>
    <string name="delete_card">Delete Card</string>
    <string name="share_eta">SHARE ETA</string>
    <string name="contact_driver">CONTACT DRIVER</string>
    <string name="cancel_trip">CANCEL TRIP</string>
    <string name="fare_quote">FARE CALCULATOR</string>
    <string name="bookNow">BOOK NOW</string>
    <string name="promo_code">PROMO CODE</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Dropoff Location</string>
    <string name="fare_may_vary_line1">Fare may vary due to traffic, weather</string>
    <string name="fare_may_vary_line2">and other factors. Estimate doesnot</string>
    <string name="fare_may_vary_line3">include discount or promotions</string>
    <string name="new_destination">ENTER A NEW \nDESTINATION</string>
    <string name="network_connection_fail">Network connection fail</string>
    <string name="enter_valid_email">Please enter an valid email id</string>
    <string name="email_empty">Please enter your Email Id.</string>
    <string name="mobile_empty">Please enter your mobile no.</string>
    <string name="please_wait">Please Wait</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="email">Email</string>
    <string name="mobile_invalid">Invalid Mobile No.</string>
    <string name="email_registered">Email already registered choose other.</string>
    <string name="password">Password*</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="confirm">CONFIRM \n DESTINATION</string>
    <string name="sign_in">SIGN IN</string>
    <string name="user_name">Email Address*</string>
    <string name="login">GETIN</string>
    <string name="cancel_account_creation">CANCEL ACCOUNT CREATION</string>
    <string name="cancel_account_creation_alert">Are you sure you want to cancel? Your information will not be saved.</string>
    <string name="password_strength_low">Password strength: Low</string>
    <string name="password_strength_low_message">Please set the password which contain a mixture of alphabets and numbers.</string>
    <string name="first_name_empty">Please enter your first name.</string>
    <string name="last_name_empty">Last name field is empty.</string>
    <string name="password_empty">Please enter your password</string>
    <string name="password_sould_not_empty">Password field should not be empty.</string>
    <string name="mobile_registered">Mobile already registered choose other.</string>
    <string name="phone_num_empty">Phone.No field is empty.</string>
    <string name="zipcode_empty">Zipcode field is empty.</string>
    <string name="confirm_password_empty">"Confirm Password field is empty."</string>
    <string name="passwords_not_match">confirm password not matching with password entry.</string>
    <string name="accept_terms_conditions">"Please accept Terms and Conditions."</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="submit">Submit</string>
    <string name="waitforsomtim">WAIT A FEW SECONDS... NOW, ENTER CODE SENT TO YOU BY SMS</string>
    <string name="driver_cancelled_booking">Driver Cancelled Booking Request</string>
    <string name="select_date_time">Select Date and Time</string>
    <string name="select_payment_type">SELECT PAYMENT TYPE</string>
    <string name="select_dropoff_location">Please select the dropoff location</string>
    <string name="driver_phone_num_not_available">Driver number not available</string>
    <string name="cancelling_trip">Cancelling Trip</string>
    <string name="gps_settings">GPS settings</string>
    <string name="gps_alert_message">Location on high accuracy mode required. Turn this feature ON from Location Services in your phone settings</string>
    <string name="network_alert_message">Please check your Internet connection and try again.</string>
    <string name="settings">Settings</string>
    <string name="go_to_settings">go to settings</string>
    <string name="network_settings">Network settings</string>
    <string name="wifi_settings">Wifi settings</string>
    <string name="cancel">CLOSE</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="promo_cancel">CANCEL</string>
    <string name="credit_cards_not_found">Payment method does not contain any credit card details. Please go to Payment menu and add the card details.</string>
    <string name="dist">Dist:</string>
    <string name="eta">ETA:</string>
    <string name="error_message">Error. Please Retry!</string>
    <string name="set_pickup_location">SET PICKUP LOCATION</string>
    <string name="miles">Km</string>
    <string name="no_drivers_found">NO DRIVERS FOUND</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="request_pickup">REQUEST PICKUP</string>
    <string name="request">REQUEST</string>
    <string name="paymeny_type">PAYMENT TYPE</string>
    <string name="addcard">ADD CARD</string>
    <string name="driver_on_the_way">DRIVER ON THE WAY</string>
    <string name="distance">DISTANCE</string>
    <string name="min_fair">MIN FARE</string>
    <string name="max_size">MAX SIZE</string>
    <string name="dispute_msg">Dispute Message?</string>
   <string name="provide_valid_reason_for_dispute">Please provide us valid reason for \n which you are disputing.</string>
    <string name="pls_enter_promo_code">Please enter promo code</string>
    <string name="alert">Alert:</string>
    <string name="skip_review_details">Are you sure to skip the review details</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="receipt">RECEIPT</string>
    <string name="dispute">Dispute</string>
    <string name="booking_id">Booking ID:</string>
    <string name="duration">DURATION</string>
    <string name="distance1">DISTANCE</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="rate_your_journey">PLEASE RATE YOUR DRIVER</string>
    <string name="write_review">Write review</string>
    <string name="done">DONE</string>
    <string name="summary">Summary</string>
    <string name="logout_alert_message">Are you sure to logout?</string>
    <string name="selecto_photo">Select Photo From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="visit_our_website_to_change_password">Please visti our website Cahnson.com to change the password</string>
    <string name="mobile_no">Mobile Noumber*</string>
    <string name="selectCountry">Select Country</string>
    <string name="requesting">Requesting...</string>
    <string name="cancelling">Cancelling...</string>
    <string name="powered_by_Google">powered by Google</string>
    <string name="share_message">Please download the Cahnson App from the below link:\n https://play.google.com/store/apps/details?id=com.Eserviss.passenger</string>
    <string name="share_link_message">Track the journey in Cahnson @</string>
    <string name="slow_internet_connection">your internet connection is too slow or not working. Please try again.</string>
    <string name="agree_terms_cond">By creating account you agree our</string>
    <string name="You_did_not_enter_valid_card">You did not enter a valid card</string>
    <string name="card_num_empty">Card number should not be empty</string>
    <string name="month_field_empty">Month field should not be empty</string>
    <string name="mobileregistered">Mobile registered</string>
    <string name="year_field_empty">Year field should not be empty</string>
    <string name="cvv_field_empty">CVV field should not be empty</string>
    <string name="signing_you_up">Registering...</string>
    <string name="signup_success">SignUp Successfull!!</string>
    <string name="have_any_issue">Have an issue visit</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="invite_share_message">TELL SOMEONE ABOUT ESERVISS SELECT AN OPTION BELOW</string>
    <string name="basefarekm">$ 00/Miles</string>
    <string name="basefaremin">$ 00/Min and</string>
    <string name="basefare">$ 00 Base fare</string>
</resources>