<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_promoCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_promo_code" />

    <LinearLayout
        android:id="@+id/promo_code_layouy"
        android:layout_width="match_parent"
        android:layout_below="@+id/et_promoCode"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_promo"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_weight="1"
            android:text="@string/promo_cancel"
            android:textColor="@color/grey" 
            android:background="@drawable/border_su"/>

        <Button
            android:id="@+id/apply_promo"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_weight="1"
            android:text="@string/apply"
            android:textColor="@color/grey"
            android:background="@drawable/border_without_left" />
    </LinearLayout>

</RelativeLayout>