<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/driver_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFFFFF" >

    <RelativeLayout
        android:id="@+id/relative_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp" >

        <Button
            android:id="@+id/share_eta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/drivermenu_popup_topcell"
            android:text="@string/share_eta"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/contact_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/share_eta"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/drivermenu_popup_topcell"
            android:text="@string/contact_driver"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/cancel_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_driver"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:background="@drawable/drivermenu_popup_topcell"
            android:text="@string/cancel_trip"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>