<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/transparent"
     >

    <RelativeLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:background="@drawable/round_grey" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/dispute_msg"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hesitate_txt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/title_text"
            android:gravity="center"
            android:text="@string/provide_valid_reason_for_dispute"
            android:textColor="@android:color/black"
            android:textSize="14sp" />



        <EditText android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:id="@+id/disputemessage"
            android:layout_below="@+id/hesitate_txt"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
           android:paddingLeft="10dp"
            android:background="@drawable/whiteround"


            />

            <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
                android:layout_marginTop="10dp"
        android:layout_below="@+id/disputemessage"
        android:background="#F9F9FB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/promo_cancel"
            android:textColor="#297BC5"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view1"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="#F9F9FB" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@null"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="#297BC5"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
    </RelativeLayout>



</RelativeLayout>